delete schedule functionality and bug squashing

--- a/public/css/adminstyles.css
+++ b/public/css/adminstyles.css
@@ -47,3 +47,13 @@ width: 100%;
   height: 25px;
   background-color: #f5f5f5;
 }
+
+.buttons .btn {
+  margin-right:20px;
+}
+
+@media screen and (max-width:768px) {
+  .margin-mobile{
+  margin-left:50px;
+  }
+}
